# evs

./: CMakeLists.txt  README.md
data/: exp_EPGMVS.bag  exp_EPVS.bag
launch/: generateVSReferenceTrajectory.launch
src/: reference_trajectory.cpp
